# tripsitters_audio_beatsync_GUI

./: .gitignore  BUILD.md  BUILD_MACOS.md  CHANGELOG.md  CLAUDE.md  CLAUDE_CONTEXT.md  CMakeLists.txt  DEVELOPMENT_CONTEXT.md  LICENSE  README.md  ROADMAP.md  ROADMAP.txt  SECURITY.md  THIRD_PARTY_LICENSES.md  TODO.md  USAGE.md  azure-pipelines.yml  build_gui.bat  build_macos.sh  build_tripsitter.ps1  build_unreal_log.txt  create_shortcut.ps1  quick_rebuild.bat  rebuild_gui.bat  run_gui.bat  setup_ffmpeg.ps1  setup_wxwidgets.bat  test_list.txt  vcpkg.json
.claude/: settings.local.json
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_DRAFTS/: onnxruntime_heap_corruption.md  vcpkg_onnxruntime_heap_corruption.md
.github/PULL_REQUESTS/: 5_pr_details.md
.github/workflows/: ci-build-tests.yml  ci.yml  cuda-integration.yml  evaluation.yml  gpu-long-video.yml  gpu-pr-check.yml  gpu-runner-sanity.yml  macos-build.yml  python-integration.yml  runner-smoke.yml  tracing-smoke.yml  unreal-editor-automation-template.yml  unreal-editor-automation.yml  windows-build.yml  windows-release.yml
TripSitterBeatSync/: .gitignore  README.md  TripSitterBeatSync.uproject  auto_ui.py  build_backend.sh  build_ui.py  create_ui.py  open_widget.py  setup_ui.py  setup_widget.py
TripSitterBeatSync/Config/: DefaultEditor.ini  DefaultEngine.ini  DefaultGame.ini  DefaultInput.ini
TripSitterBeatSync/Content/: NewMap.umap  Untitled.umap
TripSitterBeatSync/Content/Blueprints/: BP_BeatSyncGameMode.uasset  BP_BeatSyncPlayerController.uasset
TripSitterBeatSync/Plugins/TripSitterUE/: TripSitterUE.uplugin
TripSitterBeatSync/Source/: TripSitterBeatSync.Target.cs  TripSitterBeatSyncEditor.Target.cs
TripSitterBeatSync/Source/TripSitterBeatSync/: BeatSyncGameMode.cpp  BeatSyncGameMode.h  BeatSyncHUD.cpp  BeatSyncHUD.h  TripSitterBeatSync.Build.cs  TripSitterBeatSync.cpp
TripSitterBeatSync/scripts/: detect_beats.py  export_beatnet_onnx.py  export_demucs_onnx.py  requirements.txt  setup_ai_models.bat  setup_ai_models.sh
assets/: Info.plist.in  README.md
assets/transitions/: README.md  fade.glsl
backups/Release-20260106-204133/: beatsync
backups/Release-20260106-204133/assets/: icon.rc
backups/ui-windows-20260110/GUI/: BeatVisualizer.h  MainWindow.cpp  MainWindow.h  ProcessingThread.cpp  PsychedelicTheme.h
build_gui/TripSitter.dir/Release/: TripSitter.exe.recipe
build_gui/beatsync.dir/Release/: beatsync.exe.recipe
build_test/TripSitter.dir/Release/: TripSitter.exe.recipe
build_test/beatsync.dir/Release/: beatsync.exe.recipe
cmake/: FetchOnnxRuntime.cmake
docs/: MAC_BUILD.md  NATIVE_CPP_BEAT_MODEL.md  RELEASE_PROCESS.md  RUNNER_PROVISIONING.md  TRACING.md  UNREAL_CI_SETUP.md
evaluation/: README.md  generate_synthetic.py  queries.json  run_evaluation.py  sanity_check.ps1  sanity_check.sh  smoke_sync_short.py
installer/: nsis_template.nsi.in
scripts/: add-wallpaper.ps1  beatnet_analyze.py  build_release.ps1  check-ffmpeg-nvenc.ps1  check_gpu_runner.ps1  check_gpu_runner.sh  check_no_ffmpeg.ps1  convert_allinone_to_onnx.py  convert_beatnet_direct.py  convert_beatnet_to_onnx.py  convert_demucs_to_onnx.py  convert_madmom_tcn_to_onnx.py  demucs_separate.py  deploy_tripsitter.ps1  import_assets.ps1  provision-runner-macos.sh  provision-runner-windows.ps1  requirements.txt  run_long_video_test.ps1  run_long_video_test.sh  run_official_onnx_test.ps1  run_tracing_local.ps1  run_tracing_local.sh  setup_venv.ps1  setup_venv.sh  sign-windows-binaries.ps1  sync_tripsitter_ue.ps1
src/: GUI_main.cpp  main.cpp
src/GUI/: BeatVisualizer.cpp  BeatVisualizer.h  MainWindow.cpp  MainWindow.h  PsychedelicTheme.cpp  SettingsManager.cpp  SettingsManager.h  VideoPreview.cpp  VideoPreview.h
src/audio/: AudioAnalyzer.cpp  AudioAnalyzer.h  AudioFluxBeatDetector.cpp  AudioFluxBeatDetector.h  BeatGrid.cpp  BeatGrid.h  BeatNetBridge.cpp  BeatNetBridge.h  EssentiaAnalyzer.cpp  EssentiaAnalyzer.h  FFTAnalyzer.cpp  FFTAnalyzer.h  OnnxBeatDetector.cpp  OnnxBeatDetector.h  OnnxMusicAnalyzer.cpp  OnnxMusicAnalyzer.h  OnnxStemSeparator.cpp  OnnxStemSeparator.h  SpectralFlux.cpp  SpectralFlux.h  StemSeparator.cpp  StemSeparator.h  kiss_fft.h
src/backend/: beatsync_capi.cpp  beatsync_capi.h  tracing.cpp  tracing.h  tracing_helpers.cpp  tracing_helpers.h
src/launcher/: TripSitterLauncher.cpp
src/tools/: backend_smoke.cpp  dll_loader_smoke.cpp
src/tracing/: Tracing.cpp  Tracing.h
src/utils/: DebugLogger.cpp  DebugLogger.h  LogArchiver.cpp  LogArchiver.h  ProcessUtils.cpp  ProcessUtils.h
src/video/: AudioReactiveEffects.cpp  AudioReactiveEffects.h  TransitionLibrary.cpp  TransitionLibrary.h  VideoProcessor.cpp  VideoProcessor.h  VideoWriter.cpp  VideoWriter.h
tests/: CMakeLists.txt  catch_main.cpp  onnx_inference_helper.cpp  test_ai_cleanup.cpp  test_audioflux.cpp  test_backend_api.cpp  test_beatnet_bridge.cpp  test_beatnet_python.cpp  test_deflate_catch2.cpp  test_essentia_integration.cpp  test_fft_analyzer.cpp  test_header_paint.cpp  test_logarchiver_deflate.cpp  test_onnx_ai.cpp  test_onnx_detector.cpp  test_onnx_detector_regression.cpp  test_spectral_flux.cpp  test_tracing.cpp  test_transition_chaining.cpp  test_transition_library.cpp  test_wallpaper_installed.cpp
tests/fixtures/: beatnet_fake.py  mock_beatnet.py  test_audio.beatnet.json  test_audio.onnx.json
tests/models/: beat_stub.onnx
tools/: check_gpu_changes.py  convert_pytorch_to_onnx.py  copy_stub_to_reference.py  debug_parse.py  generate_beat_stub.py  generate_long_test_wav.py
tools/tracing/: docker-compose.yml  otel-collector-config.yaml  start-tracing-collector.ps1  start-tracing-collector.sh
unreal-prototype/: PROGRAM_TARGET_README.md  README.md  TripSitter.uproject
unreal-prototype/.claude/: settings.local.json
unreal-prototype/Plugins/TripSitterUE/: TripSitterUE.uplugin
unreal-prototype/Source/: TripSitter.Target.cs
unreal-prototype/Source/TripSitter/: TripSitter.Build.cs  TripSitterApplication.cpp  TripSitterMain.cpp  (+1 more)
unreal-prototype/scripts/: Build-Program-Target.ps1  Setup-Engine-Symlink.ps1  run-unreal-automation.ps1
(+105 files in other folders)
